--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -3,7 +3,7 @@
   "configurations": {
     "caipi": {
       "appLocation": "public",
-      "apiLocation": ".",
+      "apiLocation": "api",
       "outputLocation": "public",
       "apiLanguage": "python",
       "apiVersion": "3.10"
