Add jinja2 to requirements.txt and update appLocation in swa-cli.config.json

--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -2,7 +2,7 @@
   "$schema": "https://aka.ms/azure/static-web-apps-cli/schema",
   "configurations": {
     "caipi": {
-      "appLocation": "public",
+      "appLocation": ".",
       "apiLocation": "api",
       "outputLocation": "public",
       "apiLanguage": "python",
