--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -2,9 +2,9 @@
   "$schema": "https://aka.ms/azure/static-web-apps-cli/schema",
   "configurations": {
     "caipi": {
-      "appLocation": ".",
-      "apiLocation": "api",
+      "appLocation": "public",
       "outputLocation": "public",
+      "apiLocation": "api",
       "apiLanguage": "python",
       "apiVersion": "3.10"
     }
