--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -1,4 +1,15 @@
 {
+    "trailingSlash": "auto",
+    "auth": {
+        "identityProviders": {
+            "github": {
+                "registration": {
+                    "clientIdSettingName": "GITHUB_CLIENT_ID",
+                    "clientSecretSettingName": "GITHUB_CLIENT_SECRET"
+                }
+            }
+        }
+    },
     "routes": [
         {
             "route": "/app",
