401 redirects to /login

--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -54,7 +54,7 @@
     },
     "responseOverrides": {
         "401": {
-            "redirect": "/login?post_login_redirect_uri=/app",
+            "redirect": "/login",
             "statusCode": 302
         }
     }
