--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tauri-apps/plugin-opener": "^2",
     "bits-ui": "^2.15.4",
     "clsx": "^2.1.1",
+    "dompurify": "^3.3.1",
     "highlight.js": "^11.11.1",
     "lucide-svelte": "^0.562.0",
     "marked": "^17.0.1",
@@ -37,6 +38,7 @@
     "@tauri-apps/cli": "^2",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/svelte": "^5.3.1",
+    "@types/dompurify": "^3.0.5",
     "autoprefixer": "^10.4.23",
     "happy-dom": "^20.3.7",
     "postcss": "^8.5.6",
