--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@fontsource-variable/inter": "^5.2.8",
+    "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.6.0",
     "@tauri-apps/plugin-fs": "^2.4.5",
@@ -28,7 +30,8 @@
     "lucide-svelte": "^0.562.0",
     "marked": "^17.0.1",
     "tailwind-merge": "^3.4.0",
-    "tailwind-variants": "^3.2.2"
+    "tailwind-variants": "^3.2.2",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.6",
@@ -39,12 +42,10 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/svelte": "^5.3.1",
     "@types/dompurify": "^3.0.5",
-    "autoprefixer": "^10.4.23",
     "happy-dom": "^20.3.7",
-    "postcss": "^8.5.6",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
-    "tailwindcss": "^3.4.19",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
     "vitest": "^4.0.18"
