--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "caipi",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "type": "module",
   "scripts": {
@@ -23,6 +23,8 @@
     "@tauri-apps/plugin-dialog": "^2.6.0",
     "@tauri-apps/plugin-fs": "^2.4.5",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-process": "^2",
+    "@tauri-apps/plugin-updater": "^2.9.0",
     "bits-ui": "^2.15.4",
     "clsx": "^2.1.1",
     "dompurify": "^3.3.1",
