--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "caipi"
-version = "0.1.4"
-description = "A Tauri App"
+version = "0.1.6"
+description = "A native macOS client for Claude Code"
 authors = ["you"]
 edition = "2021"
 
