--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "caipi",
+  "name": "Caipi",
   "version": "0.1.6",
   "description": "A native macOS client for Claude Code",
   "type": "module",
