--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "caipi"
-version = "0.1.11"
+version = "0.1.13"
 description = "A native macOS client for Claude Code"
 authors = ["you"]
 edition = "2021"
@@ -36,6 +36,7 @@ futures = "0.3"
 tempfile = "3"
 reqwest = { version = "0.12", features = ["json"] }
 hostname = "0.4"
+sha2 = "0.10"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
