--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,6 +37,7 @@ tempfile = "3"
 reqwest = { version = "0.12", features = ["json"] }
 hostname = "0.4"
 sha2 = "0.10"
+async-trait = "0.1.89"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
