--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "caipi"
-version = "0.1.17"
+version = "0.1.18"
 description = "A native macOS client for Claude Code"
 authors = ["you"]
 edition = "2021"
@@ -32,6 +32,7 @@ dirs = "5"
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 thiserror = "1"
+async-trait = "0.1"
 futures = "0.3"
 tempfile = "3"
 reqwest = { version = "0.12", features = ["json"] }
