--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,6 +38,7 @@ tempfile = "3"
 reqwest = { version = "0.12", features = ["json"] }
 hostname = "0.4"
 sha2 = "0.10"
+parking_lot = "0.12"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
