--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
           - platform: macos-14
             target: aarch64-apple-darwin
             os: macos
-          - platform: windows-latest
+          - platform: windows-2022
             target: x86_64-pc-windows-msvc
             os: windows
     runs-on: ${{ matrix.platform }}
