--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,8 +27,7 @@ tauri-plugin-updater = "2"
 tauri-plugin-os = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "1", features = ["macros", "rt", "sync"] }
-claude-agent-sdk-rs = { git = "https://github.com/pietz/claude-agent-sdk-rs.git", branch = "master" }
+tokio = { version = "1", features = ["macros", "rt", "sync", "process"] }
 dirs = "5"
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
